# Path-Of-Exile-2-RPC

./: .gitignore  AGENTS.md  CLAUDE.md  PathOfExile2DiscordRPC.spec  README.md  README.ru.md  README.ua.md  main.py  pyproject.toml  requirements.txt
.github/: AGENTS.md
.github/ISSUE_TEMPLATE/: AGENTS.md
.github/workflows/: AGENTS.md  build.yml
.omc/plans/: open-questions.md  ralplan-architecture-libraries.md  ralplan-upstream-prs.md
.omc/specs/: deep-dive-architecture-libraries.md  deep-dive-trace-architecture-libraries.md  deep-interview-upstream-prs.md
docs/plans/: autopilot-vivid-hare.md
src/poe2_rpc/: AGENTS.md  __init__.py  __main__.py  __version__.py  cli.py  locations.json
src/poe2_rpc/application/: AGENTS.md  __init__.py  bus.py  handlers.py  orchestrator.py  throttle.py
src/poe2_rpc/domain/: AGENTS.md  __init__.py  classes.py  events.py  exceptions.py  locations.py  models.py  owner.py  ports.py
src/poe2_rpc/infrastructure/: AGENTS.md  __init__.py  autostart.py  catalog.py  detection.py  log_stream.py  logging.py  parsing.py  presence.py  settings.py  tray.py
tests/: AGENTS.md  conftest.py
tests/integration/: AGENTS.md  test_bundled_catalog.py  test_cli.py  test_cold_start.py  test_main_module.py  test_orchestrator.py  test_regex_real_sample.py
tests/unit/: AGENTS.md  test_afk.py  test_autostart.py  test_bus.py  test_catalog.py  test_classes.py  test_detection.py  test_events.py  test_exceptions.py  test_extras_missing.py  test_handlers.py  test_layering.py  test_locations.py  test_log_parser_protocol.py  test_log_stream.py  test_logging.py  test_models.py  test_no_mutable_state.py  test_orchestrator_layering.py  test_orchestrator_stop.py  test_owner.py  test_parsing.py  test_ports.py  test_presence_connect.py  test_presence_publish.py  test_settings.py  test_smoke.py  test_throttle.py  test_tray.py
