[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poe2-rpc"
dynamic = ["version"]
description = "Discord Rich Presence integration for Path of Exile 2"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "ezbooz" }]
keywords = ["path-of-exile", "discord", "rich-presence", "rpc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "psutil>=5.9",
    "pypresence>=4.3",
    "watchdog>=4.0",
    "tenacity>=8.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "mypy>=1.10",
    "ruff>=0.5",
    "import-linter>=2.0",
    "pyinstaller>=6.14",
    "types-psutil",
]

[project.scripts]
poe2-rpc = "poe2_rpc.cli:app"

[project.urls]
Homepage = "https://github.com/ezbooz/Path-Of-Exile-2-RPC"
Repository = "https://github.com/ezbooz/Path-Of-Exile-2-RPC"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
poe2_rpc = ["py.typed", "locations.json"]

[tool.setuptools.dynamic]
version = { attr = "poe2_rpc.__version__.__version__" }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PL",  # pylint
]
ignore = [
    "PLR0913", # too-many-arguments — orchestrator legitimately takes many
    "PLR2004", # magic-value-comparison — readable in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "ARG", "PLR0913", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src/poe2_rpc", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["psutil.*", "pypresence.*", "watchdog.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
markers = [
    "live: requires running PoE2 + Discord (skipped by default)",
]

[tool.importlinter]
root_package = "poe2_rpc"

[[tool.importlinter.contracts]]
name = "Hexagonal layered architecture"
type = "layers"
layers = [
    "poe2_rpc.cli",
    "poe2_rpc.application",
    "poe2_rpc.infrastructure",
    "poe2_rpc.domain",
]
